Fixing Home Page Overflow
Page was overflowing in small windows.

--- a/home/CSS/skillset.css
+++ b/home/CSS/skillset.css
@@ -69,7 +69,8 @@ ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,macbook,p,blockquote,fieldset,input{mar
 }
 
 #content2 { 
-	width:1110px;
+	width:100%;
+    max-width: 1165px;
 	position: relative;
 	margin: 0 auto;
 }
